# project-euler-rust

./: .gitignore  Cargo.toml  benchmarks.txt  justfile
problem-1/: Cargo.toml
problem-1/benches/: benchmark.rs  benchmarks.rs
problem-1/src/: lib.rs
problem-10/: Cargo.toml
problem-10/benches/: benchmarks.rs
problem-10/src/: lib.rs
problem-11/: Cargo.toml
problem-11/benches/: benchmarks.rs
problem-11/src/: lib.rs
problem-2/: Cargo.toml
problem-2/benches/: benchmarks.rs
problem-2/src/: lib.rs
problem-3/: Cargo.toml
problem-3/benches/: benchmarks.rs
problem-3/src/: lib.rs
problem-4/: Cargo.toml
problem-4/benches/: benchmarks.rs
problem-4/src/: lib.rs
problem-5/: Cargo.toml
problem-5/benches/: benchmarks.rs
problem-5/src/: lib.rs
problem-6/: Cargo.toml
problem-6/benches/: benchmarks.rs
problem-6/src/: lib.rs
problem-7/: Cargo.toml
problem-7/benches/: benchmarks.rs
problem-7/src/: lib.rs
problem-8/: Cargo.toml
problem-8/benches/: benchmarks.rs
problem-8/src/: lib.rs
problem-9/: Cargo.toml
problem-9/benches/: benchmarks.rs
problem-9/src/: lib.rs
template/: Cargo.toml
template/benches/: benchmark.rs
template/src/: lib.rs
