[package]
name = "problem-10"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
primes = { git = "https://github.com/CameronBarnes/prime-lib.git" }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "problem-10-bench"
path = "benches/benchmarks.rs"
harness = false
