[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "{{project-name}}-bench"
path = "benches/benchmarks.rs"
harness = false
